--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </tr>
                     <tr>
                         <td align="center" style=" width:100%">
-                            <p style="margin-top:0.2em; margin-bottom:0; font-size: 2em">November 18, 2021</p>
+                            <p style="margin-top:0.2em; margin-bottom:0; font-size: 2em">January 05, 2022</p>
                         </td>
                     </tr>
                     <tr>
@@ -74,7 +74,7 @@
                     <tr>
                         <td class="horizontal-line" align="center">
                             <div
-                                style="margin:2em 0; border-bottom: .16em solid #DAE1E9; border-radius: 25px;width: 80%; text-align:center;">
+                                style="margin:2em 0; border-bottom: .10em solid #DAE1E9; border-radius: 25px;width: 80%; text-align:center;">
                             </div>
                         </td>
                     </tr>
@@ -154,7 +154,7 @@
                     <tr>
                         <td class="horizontal-line" align="center">
                             <div
-                                style="margin:2em 0; border-bottom: .16em solid #DAE1E9; border-radius: 25px; width: 100%; text-align:center;">
+                                style="margin:2em 0; border-bottom: .10em solid #DAE1E9; border-radius: 25px; width: 100%; text-align:center;">
                             </div>
                         </td>
                     </tr>
@@ -264,7 +264,7 @@
                 </table>
                 <!-- end of transaction-details -->
                 <!-- start of questions -->
-                <table cellpadding="0" cellspacing="0" border="0" align="center">
+                <table cellpadding="0" cellspacing="0" border="0" align="center" style="width:100%">
                     <tr>
                         <td>
                             <h3 style="font-weight: 500; text-align:center;">Frequently asked questions</h3>
@@ -291,8 +291,38 @@
                                 purchase?</a>
                         </td>
                     </tr>
+                    <tr>
+                        <td class="horizontal-line" align="center">
+                            <div
+                                style="margin:1.5em 0; border-bottom: .10em solid #DAE1E9; border-radius: 25px; width: 80%; text-align:center;">
+                            </div>
+                        </td>
+                    </tr>
                 </table>
                 <!-- end of questions -->
+                <!--start of footer-->
+                <table cellpadding="0" cellspacing="0" border="0" align="center" style="width:80%;">
+                    <tr>
+                        <td>
+                            <p
+                                style="font-size: 12px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; color:#9BA6B2; text-align-last: center; margin:0 1.8em;">
+                                For customer service inquiries, please contact <a href="#"
+                                    style="color:#2E7BC4">customer support</a>. Please
+                                include your
+                                reference code <span style="font-weight: 700;">SDSDMS</span>.</p>
+                            <p
+                                style="font-size: 12px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; color:#9BA6B2; text-align-last: center; margin:2em 0;">
+                                Coinbase, Inc., 548 Market St., #23008, San Francisco, CA 94104-5401, (888) 908-7930.
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+                <table cellpadding="0" cellspacing="0" border="0">
+                    <p
+                        style="font-size: 14px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; color:#7E8A98; text-align-last: center; margin:2em 0; font-weight: 500;">
+                        Get the latest Coinbase App for your phone</p>
+                </table>
+                <!-- end of footer-->
             </td>
         </tr>
     </table>
