changed units, added links

--- a/index.html
+++ b/index.html
@@ -14,23 +14,24 @@
     </style>
 </head>
 
-<!-- <body margin="0" padding="0"> -->
-
-<body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" bgcolor="#fff"
+<body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0"
     style="margin:0 auto; padding:0; background:#F4F7FA; background-color:#F4F7FA">
+    <!-- start of outer table -->
     <table class="outer-table" margin="0" cellspacing="0" cellpadding="0" border="0"
         style="background:#F4F7FA; width: 37.5em !important;" align="center">
         <tr>
             <td>
+
                 <table cellspacing="0" cellpadding="0" border="0" align="center">
                     <tr>
-                        <!-- background-color: cornflowerblue; -->
                         <td align=" center" style="width: 100%;">
-                            <a style="width: 104cm;" href="https://www.coinbase.com"><img
-                                    style="margin: 2em; width: 40%;" src="/assets/coinbase_logo.png"></a>
+                            <a style=" text-align:center; width: 104cm;" href="https://www.coinbase.com"><img
+                                    style="margin: 2em; width: 40%;" src="/assets/coinbase_logo.png"
+                                    alt="blue coinbase logo"></a>
                         </td>
                     </tr>
                 </table>
+                <!-- start of main table -->
                 <table class="main" leftmargin="0" cellspacing="0" cellpadding="0" border="0"
                     style="background:#fcfdfd; width: 37.5em !important; box-shadow: .0001em .0001em .2em grey; border-radius: .28em;"
                     align="center">
@@ -41,7 +42,8 @@
 
                                 <tr>
                                     <td align="center">
-                                        <img style="margin-top: 4em; width: 50%" src="assets/check-mark.png">
+                                        <img style="margin-top: 3em; width: 50%" src="assets/check-mark.png"
+                                            alt="green circular check mark">
                                     </td>
                                 </tr>
                             </table>
@@ -84,7 +86,7 @@
                                 <tr>
                                     <td class="horizontal-line" align="center">
                                         <div
-                                            style="margin:2em 0; border-bottom: .10em solid #DAE1E9; border-radius: 25px;width: 80%; text-align:center;">
+                                            style="margin:2em 0; border-bottom: .10em solid #DAE1E9; border-radius: 1.56em;width: 80%; text-align:center;">
                                         </div>
                                     </td>
                                 </tr>
@@ -93,7 +95,7 @@
                             <!-- start of transaction-details -->
 
                             <table style="width:80%;" class="transaction-details" cellspacing="0" cellpadding="0"
-                                border="0" align="center">
+                                border="0" align="center" valign="center">
                                 <tr>
                                     <td style="width:100%;">
 
@@ -128,11 +130,11 @@
                                         <!-- end of left column of transaction details -->
                                         <!-- start of right column of transaction details -->
                                         <table class="right" align="right" style="width:50%; padding:0; margin:0;"
-                                            cellspacing="0" cellpadding="0" border="0">
+                                            cellspacing="0" cellpadding="0" border="0" valign="center">
                                             <tr>
                                                 <td>
-                                                    <p style="padding: .625em 0; margin:0; font-size: .875em;"><span
-                                                            style="color:#2E7BC4; padding: .125em .6em; border: .18em solid #DAE1E9; border-radius: .2em; letter-spacing:.125em;">SDSDMS</span>
+                                                    <p style="padding:.6em 0; margin:0; font-size: .875em;"><span
+                                                            style="background:#F4F7FA; background-color:#F4F7FA; font-family:Arial, Helvetica, sans-serif; color:#2E7BC4; padding: .3em .6em; border: .1em solid #DAE1E9; border-radius: .3em; letter-spacing:.19em;">SDSDMS</span>
                                                     </p>
                                                 </td>
                                             </tr>
@@ -152,7 +154,8 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <p style="padding: .625em 0; margin:0; font-size: .875em;">January
+                                                    <p style="padding: .625em 0; margin:0; font-size: .875em;">
+                                                        January
                                                         12 2022</p>
                                                 </td>
                                             </tr>
@@ -164,7 +167,7 @@
                                 <tr>
                                     <td class="horizontal-line" align="center">
                                         <div
-                                            style="margin:2em 0; border-bottom: .10em solid #DAE1E9; border-radius: 25px; width: 100%; text-align:center;">
+                                            style="margin:2em 0; border-bottom: .10em solid #DAE1E9; border-radius: 1.56em; width: 100%; text-align:center;">
                                         </div>
                                     </td>
                                 </tr>
@@ -261,7 +264,7 @@
                                 <!-- start of purchase button -->
                                 <tr>
                                     <td style="text-align: center;">
-                                        <a href="#"
+                                        <a href="https://www.coinbase.com/signin"
                                             style="background-color:#3C90DF; color:#fff; font-size:1em; font-weight: 600; text-decoration: none; text-align:center;margin:1em 0; width: 100%; display: block; padding: 1em 0; border-radius: .5em;">View
                                             Purchase</a>
                                     </td>
@@ -270,7 +273,7 @@
                                 <tr>
                                     <td class="horizontal-line" align="center">
                                         <div
-                                            style="margin:.5em 0; border-bottom: .16em solid #DAE1E9; border-radius: 25px; width: 100%; text-align:center;">
+                                            style="margin:.5em 0; border-bottom: .16em solid #DAE1E9; border-radius: 1.56em; width: 100%; text-align:center;">
                                         </div>
                                     </td>
                                 </tr>
@@ -285,7 +288,8 @@
                                 </tr>
                                 <tr>
                                     <td style="text-align: center; padding-bottom: 1em;">
-                                        <a href="#" style="color:#2E7BC4; text-align:center; font-size: .875em;">How
+                                        <a href="https://help.coinbase.com/en/coinbase/trading-and-funding/buying-selling-or-converting-crypto/how-long-does-a-purchase-or-deposit-take-to-complete.html"
+                                            style="color:#2E7BC4; text-align:center; font-size: .875em;">How
                                             long does a
                                             purchase or deposit
                                             take to complete?</a>
@@ -293,7 +297,8 @@
                                 </tr>
                                 <tr>
                                     <td style="text-align: center; padding-bottom: 1em;">
-                                        <a href="#" style="color:#2E7BC4; text-align:center; font-size: .875em;">How are
+                                        <a href="https://help.coinbase.com/en/coinbase/trading-and-funding/pricing-and-fees/fees.html?b_id=13521https://help.coinbase.com/en/coinbase/trading-and-funding/pricing-and-fees/fees.html?b_id=13521"
+                                            style="color:#2E7BC4; text-align:center; font-size: .875em;">How are
                                             fees
                                             applied when I buy or
                                             sell digital
@@ -301,8 +306,9 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td style="text-align: center; padding-bottom: 1em;">
-                                        <a href="#" style="color:#2E7BC4; text-align:center; font-size: .875em;">Can I
+                                    <td style="text-align: center;">
+                                        <a href="https://help.coinbase.com/en/coinbase/trading-and-funding/buying-selling-or-converting-crypto/cancelling-a-purchase.html?b_id=13521"
+                                            style="color:#2E7BC4; text-align:center; font-size: .875em;">Can I
                                             cancel my
                                             purchase?</a>
                                     </td>
@@ -310,7 +316,7 @@
                                 <tr>
                                     <td class="horizontal-line" align="center">
                                         <div
-                                            style="margin:1.5em 0; border-bottom: .10em solid #DAE1E9; border-radius: 25px; width: 80%; text-align:center;">
+                                            style="margin:1.5em 0; border-bottom: .10em solid #DAE1E9; border-radius: 1.56em; width: 80%; text-align:center;">
                                         </div>
                                     </td>
                                 </tr>
@@ -321,13 +327,14 @@
                                 <tr>
                                     <td>
                                         <p
-                                            style="font-size: 12px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; color:#9BA6B2; text-align-last: center; margin:0 1.8em;">
-                                            For customer service inquiries, please contact <a href="#"
-                                                style="color:#2E7BC4">customer support</a>. Please
+                                            style="font-size: .75em; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; color:#9BA6B2; text-align-last: center; margin:0 1.8em;">
+                                            For customer service inquiries, please contact <a
+                                                href="https://help.coinbase.com/" style="color:#2E7BC4">customer
+                                                support</a>. Please
                                             include your
                                             reference code <span style="font-weight: 700;">SDSDMS</span>.</p>
                                         <p
-                                            style="font-size: 12px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; color:#9BA6B2; text-align-last: center; margin:2em 0;">
+                                            style="font-size: .75em; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; color:#9BA6B2; text-align-last: center; margin:2em 0;">
                                             Coinbase, Inc., 548 Market St., #23008, San Francisco, CA 94104-5401, (888)
                                             908-7930.
                                         </p>
@@ -338,41 +345,41 @@
                         </td>
                     </tr>
                 </table>
-                <!-- start of outer-footer-->
+                <!-- end of main table -->
+                <!-- start of footer-->
                 <table cellpadding="0" cellspacing="0" border="0" align="center" style="width: 100%;">
                     <tr style="width: 80%;">
                         <td style="display:block; width: 100%;">
                             <p
-                                style="font-size: 14px;  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; color:#7E8A98; text-align:center; margin:3em 0 .7em; font-weight: 500;">
+                                style="font-size: .875em;  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; color:#7E8A98; text-align:center; margin:3em 0 .7em; font-weight: 500;">
                                 Get the latest Coinbase App for your phone</p>
                     <tr>
                         <td style="display:block; text-align: center; width:100%; padding:.7em 0;">
-                            <a href="#"><img style="display:inline-block; margin: 0 .2em; width: 25%;"
+                            <a href="https://apps.apple.com/us/app/coinbase-buy-bitcoin-more/id886427730"><img
+                                    style="display:inline-block; margin: 0 .2em; width: 25%;"
                                     src="https://s3.amazonaws.com/app-public/Coinbase-email/iOS_app.png"
                                     alt="apple-app-icon"></a>
-                            <a href="#"> <img style="display:inline-block; width: 25%; margin: 0 .2em;"
+                            <a
+                                href="https://play.google.com/store/apps/details?id=com.coinbase.android&referrer=utm_source%3Dko_bbcb5a2d590b217cb%26utm_medium%3D1%26utm_campaign%3Dkocoinbase----production553ec3be25c1308daf2a5d2791%26utm_term%3D%26utm_content%3D%26">
+                                <img style="display:inline-block; width: 25%; margin: 0 .2em;"
                                     src="https://s3.amazonaws.com/app-public/Coinbase-email/Android_app.png"
                                     alt="android-app-icon"></a>
-
                         </td>
-
                     </tr>
                     <tr>
                         <td>
-                            <p style="color:#9EB0C9; font-size: 10px; text-align: center; margin: 2em 0; ">@ Coinbase
+                            <p style="color:#9EB0C9; font-size: .625em; text-align: center; margin: 2em 0; ">@ Coinbase
                                 2022</p>
                         </td>
                     </tr>
             </td>
-
-
-
         </tr>
     </table>
-    <!-- end of outer-footer-->
+    <!-- end of the footer-->
     </td>
     </tr>
     </table>
+    <!-- end of the outer table -->
 </body>
 
 </html>
