centered coinbase logo

--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
         style="background:#F4F7FA; width: 37.5em !important;" align="center">
         <tr>
             <td>
-
                 <table cellspacing="0" cellpadding="0" border="0" align="center">
                     <tr>
-                        <td align=" center" style="width: 100%;">
-                            <a style=" text-align:center; width: 104cm;" href="https://www.coinbase.com"><img
+                        <td align="center" style="width: 100%;">
+                            <a style="text-align:center; width: 104cm;" href="https://www.coinbase.com"><img
                                     style="margin: 2em; width: 40%;" src="/assets/coinbase_logo.png"
                                     alt="blue coinbase logo"></a>
                         </td>
@@ -33,7 +32,7 @@
                 </table>
                 <!-- start of main table -->
                 <table class="main" leftmargin="0" cellspacing="0" cellpadding="0" border="0"
-                    style="background:#fcfdfd; width: 37.5em !important; box-shadow: .0001em .0001em .2em grey; border-radius: .28em;"
+                    style="background:#fcfdfd; width: 37.5em !important; box-shadow: .0001em .0001rem .2em grey; border-radius: .28em;"
                     align="center">
                     <tr>
                         <td>
