change font-color of link'here'

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                         why<span
                           ><a
                             href="https://help.coinbase.com/en/coinbase/trading-and-funding/buying-selling-or-converting-crypto/cancelling-a-purchase.html"
-                          >
+                          style ="color: #2e7bc4;">
                             here.</a
                           ></span
                         >
